tests/snapshots/run_wpt_conformance__coreml_equal_float32_broadcasting_two_5D_inputs_with_a_leading_batch_size_of_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
equal.https.any.js equal float32 broadcasting two 5D inputs with a leading batch size of 1, coreml
 equal :: equal float32 broadcasting two 5D inputs with a leading batch size of 1: index 3: actual=0 expected=1 tolerance=0
  inputs: inputA: [255, 0, 1, 8]; inputB: [0, 1, 2, 8, 0, 255]
  expected output: [0, 0, 0, 1, 0, 0, 0, 0, 0, 1 ...] (len=12)
  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=12)
  expected output full nd:
[0, 0, 0, 1, 0, 0, 0, 0, 0, 1, ...] (len=12, shape=[1, 2, 2, 1, 3])
  actual output full nd:
[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=12, shape=[1, 2, 2, 1, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[1, 2, 2, 1, 1];
    inputB: f32[1, 2, 1, 1, 3];
  }

  nodes {
    [output] = equal(inputA, inputB, label="");
  }

  outputs { output; }
}
