tests/snapshots/run_wpt_conformance__coreml_equal_int32_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
equal.https.any.js equal int32 4D tensors, coreml
 equal :: equal int32 4D tensors: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [1, -2, 3, -4, 5, -6, 7, -8, 9, -10, 11, -12]; inputB: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
  expected output: [1, 0, 1, 0, 1, 0, 1, 0, 1, 0 ...] (len=12)
  actual output: [0, 0, 128, 63, 0, 0, 0, 0, 0, 0 ...] (len=12)
  expected output full nd:
[1, 0, 1, 0, 1, 0, 1, 0, 1, 0, ...] (len=12, shape=[1, 2, 2, 3])
  actual output full nd:
[0, 0, 128, 63, 0, 0, 0, 0, 0, 0, ...] (len=12, shape=[1, 2, 2, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: i32[1, 2, 2, 3];
    inputB: i32[1, 2, 2, 3];
  }

  nodes {
    [output] = equal(inputA, inputB, label="");
  }

  outputs { output; }
}
