tests/snapshots/run_wpt_conformance__coreml_erf_float16_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "erf.https.any.js",
    "erf float16 2D tensor",
    "coreml",
    "PASS",
)
